[Fix] first background box clipped problem fixed
first background box is no longer clipped by header

--- a/src/assets/scss/CFP/CFP.scss
+++ b/src/assets/scss/CFP/CFP.scss
@@ -12,7 +12,6 @@ $width-svg-news: 188px;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 126px;
-  padding-bottom: 126px;
 
   img.svg {
     height: auto;
