--- a/src/assets/scss/CFP/cfp_introduction.scss
+++ b/src/assets/scss/CFP/cfp_introduction.scss
@@ -36,6 +36,8 @@ $buttonHoverBg: #226BB4;
 
 #cfp-introd {
     overflow: hidden;
+    padding-top: 126px;
+    
   .introduction-container {
     overflow-x: hidden;
     overflow-y: hidden; 
